force-app/main/default/objects/Return_Line__c/fields/Additional_Return_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Return_Notes__c</fullName>
    <inlineHelpText>Enter additional return notes to streamline return processing.</inlineHelpText>
    <label>Additional Return Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>