force-app/main/default/objects/Return_Line__c/fields/Line_Total_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Product_Price__c</fullName>
    <formula>Retail_Wholesale_Price__c *  Return_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>