force-app/main/default/objects/Return_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Returning Product Name. Must be from originating Shipping Manifest Line.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Return Lines</relationshipLabel>
    <relationshipName>Return_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>