force-app/main/default/objects/Return_Line__c/fields/Retail_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Wholesale_Price__c</fullName>
    <inlineHelpText>Enter original retail wholesale price</inlineHelpText>
    <label>Retail Wholesale Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>