force-app/main/default/objects/Return_Line__c/fields/Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Code__c</fullName>
    <inlineHelpText>Select appropriate return code</inlineHelpText>
    <label>Return Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Return_Codes</valueSetName>
    </valueSet>
</CustomField>