force-app/main/default/objects/Return_Line__c/fields/Return_Qty__c.field-meta.xml
<CustomField>
    <fullName>Return_Qty__c</fullName>
    <inlineHelpText>Input quantity returning. Return Quantity shall not exceed original shipping qty.</inlineHelpText>
    <label>Return Qty</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>