force-app/main/default/objects/Return_Line__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <inlineHelpText>Person shall select the current stage of processing return request.</inlineHelpText>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Return_Status</valueSetName>
    </valueSet>
</CustomField>