force-app/main/default/objects/Return_Line__c/fields/Shipping_Manifest_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest_Line__c</fullName>
    <inlineHelpText>Enter original shipping manifest line, must match for return approval.</inlineHelpText>
    <label>Shipping Manifest Line</label>
    <referenceTo>Shipping_Manifest_Line__c</referenceTo>
    <relationshipLabel>Return Lines</relationshipLabel>
    <relationshipName>Return_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>