force-app/main/default/objects/Return_Line__c/fields/Unit_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Excise_Tax__c</fullName>
    <formula>IF(AND(ISPICKVAL(Product__r.Apply_Excise_Tax__c,&apos;Yes&apos;),Return_Qty__c &gt;0),  Retail_Wholesale_Price__c * 1.6 * 0.15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>