force-app/main/default/objects/Return_Line__c/fields/Unit_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Total_Price__c</fullName>
    <formula>Retail_Wholesale_Price__c +  Unit_Excise_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>